# judo

./: .gitignore  Cargo.toml  README.md  memory:
migrations/: 20250813065854_initial_schema.sql  20250815000000_make_priority_optional.sql  20250914000000_add_ordering_fields.sql
src/: app.rs  db.rs  main.rs  models.rs
src/app/: events.rs  state.rs
src/db/: config.rs  connections.rs  models.rs  ops.rs
src/ui/: cursor.rs  layout.rs  mod.rs  theme.rs
src/ui/components/: database.rs  db_selector.rs  input_states.rs  items.rs  lists.rs  logo.rs  mod.rs  popups.rs
tests/: mod.rs
tests/db/: mod.rs  todo_item_ops.rs  todo_list_ops.rs
tests/helpers/: db.rs
