[package]
name = "td"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "td"
path = "src/main.rs"

[lib]
name = "td"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.29.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
