[package]
name = "judo"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "judo"
path = "src/main.rs"

[lib]
name = "judo"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.29.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
